# llm-zoomcamp

./: .gitignore  pyproject.toml
libs/: ingest.py  rag.py  rag_vector.py
rag/: 01_rag.ipynb  01_scratch_rag.ipynb  homework_1.ipynb
rag/homework/: homework_1.ipynb  rag_helper.py
vector-search/: vector-search.ipynb
vector-search/homework/: homework.ipynb
